@@ -6,8 +6,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.net.URL;
-import java.util.List;
+import java.net.URI;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -23,13 +22,23 @@ class LinkTest {
     static String allFieldsOperationRefYAML = "/Link/all-fields-operation-ref.yaml";
     static String allFieldsOperationIdYAML = "/Link/all-fields-operation-id.yaml";
     static String missingOperationIdentifier = "/Link/missing-operation-identifier.json";
+    static String bothOperationIdentifiersJSON = "/Link/both-operation-identifier-provided.json";
 
     @Test
     @Tag("JSON")
     @DisplayName("All fields with operation ref [JSON]")
     public void allFieldsOperationRefJSON() throws Exception {
         Link link = Parser.parseJSON(getClass().getResource(allFieldsOperationRefJSON), Link.class);
-        assertThat(link.operationRef(), is(new URL("https://na2.gigantic-server.com/#/paths/some-path/get")));
+        assertThat(link.operationRef(), is(new URI("https://na2.gigantic-server.com/#/paths/some-path/get")));
+        validateAllFields(link);
+    }
+
+    @Test
+    @Tag("YAML")
+    @DisplayName("All fields with operation ref [YAML]")
+    public void allFieldsOperationRefYAML() throws Exception {
+        Link link = Parser.parseYAML(getClass().getResource(allFieldsOperationRefYAML), Link.class);
+        assertThat(link.operationRef(), is(new URI("https://na2.gigantic-server.com/#/paths/some-path/get")));
         validateAllFields(link);
     }
 
@@ -39,15 +48,6 @@ class LinkTest {
     public void allFieldsOperationIdJSON() throws Exception {
         Link link = Parser.parseJSON(getClass().getResource(allFieldsOperationIdJSON), Link.class);
         assertThat(link.operationId(), is("getUserInfo"));
-        validateAllFields(link);
-    }
-
-    @Test
-    @Tag("YAML")
-    @DisplayName("All fields with operation ref [YAML]")
-    public void allFieldsOperationRefYAML() throws Exception {
-        Link link = Parser.parseYAML(getClass().getResource(allFieldsOperationRefYAML), Link.class);
-        assertThat(link.operationRef(), is(new URL("https://na2.gigantic-server.com/#/paths/some-path/get")));
         validateAllFields(link);
     }
 
@@ -65,19 +65,25 @@ class LinkTest {
     @DisplayName("Missing both operationRef and operationId")
     public void missingOperationIdentifier() {
         ParsingException exception = assertThrows(ParsingException.class, () -> Parser.parseJSON(getClass().getResource(missingOperationIdentifier), Link.class));
-        assertThat(exception.getMessage(), startsWith("Cannot construct instance of `openapi.model.v310.Link`, problem: An 'link' Object must have either an 'operationRef' or an 'operationId' field"));
+        assertThat(exception.getMessage(), startsWith("Cannot construct instance of `openapi.model.v310.Link`, problem: A 'link' Object must have either an 'operationRef' or an 'operationId' field"));
         assertThat(exception.getCause().getClass(), is(IllegalArgumentException.class));
-        assertThat(exception.getCause().getMessage(), is("An 'link' Object must have either an 'operationRef' or an 'operationId' field"));
+        assertThat(exception.getCause().getMessage(), is("A 'link' Object must have either an 'operationRef' or an 'operationId' field"));
     }
+
+    @Test
+    @Tag("JSON")
+    @DisplayName("Both operationRef and operationId provided")
+    public void bothOperationIdentifiersProvided() {
+        ParsingException exception = assertThrows(ParsingException.class, () -> Parser.parseJSON(getClass().getResource(bothOperationIdentifiersJSON), Link.class));
+        assertThat(exception.getMessage(), startsWith("Cannot construct instance of `openapi.model.v310.Link`, problem: A 'link' Object can't have both an 'operationRef' and an 'operationId' field"));
+        assertThat(exception.getCause().getClass(), is(IllegalArgumentException.class));
+        assertThat(exception.getCause().getMessage(), is("A 'link' Object can't have both an 'operationRef' and an 'operationId' field"));
+    }
+
 
     public void validateAllFields(Link link) {
         assertThat(link.parameters(), is(Map.of("key1", "value1", "key2", "value2")));
         assertThat(link.description(), is("the target link operation"));
         assertThat(link.server().url(), is("https://{username}.gigantic-server.com:{port}/{basePath}"));
-        assertThat(link.server().description(), is("The production API server"));
-        assertThat(link.server().variables().size(), is(3));
-        assertThat(link.server().variables().get("username"), is(new ServerVariable(null, "demo", "this value is assigned by the service provider, in this example `gigantic-server.com`")));
-        assertThat(link.server().variables().get("port"), is(new ServerVariable(List.of("8443", "443"), "8443", null)));
-        assertThat(link.server().variables().get("basePath"), is(new ServerVariable(null, "v2", null)));
     }
 }
